--- a/www/po/fr.po
+++ b/www/po/fr.po
@@ -1,16 +1,11 @@
 msgid ""
 msgstr ""
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: \n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"MIME-Version: 1.0\n"
-"X-Generator: Poedit 1.6.5\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Language: fr_FR\n"
+"X-Generator: POEditor.com\n"
+"Project-Id-Version: ShakeTonBDE\n"
+"Language: fr\n"
 
 #: /workspace/shaketonbde/www/templates/event.html
 msgid "Checkroom"
@@ -19,6 +14,27 @@ msgstr "Vestiaire"
 #: /workspace/shaketonbde/www/templates/event.html
 msgid "Drinks"
 msgstr "Boissons"
+
+#: /workspace/shaketonbde/www/templates/menu.html
+msgid "Find events"
+msgstr "Trouver les soirées"
+
+#: /workspace/shaketonbde/www/templates/menu.html
+msgid "Invite your friends!"
+msgstr "Invite tes potes !"
+
+#: /workspace/shaketonbde/www/templates/menu.html
+msgid "Menu"
+msgstr "Menu"
+
+#: /workspace/shaketonbde/www/templates/camera.html
+#: /workspace/shaketonbde/www/templates/menu.html
+msgid "Shoot your friends!"
+msgstr "Shoote tes potes !"
+
+#: /workspace/shaketonbde/www/templates/event.html
+msgid "Tickets"
+msgstr "Entrées"
 
 #: /workspace/shaketonbde/www/templates/invite.html
 msgid "Email:"
@@ -36,18 +52,6 @@ msgstr "Erreur lors de la récupération de la photo"
 msgid "Facebook:"
 msgstr "Facebook :"
 
-#: /workspace/shaketonbde/www/templates/menu.html
-msgid "Find events"
-msgstr "Trouver les soirées"
-
-#: /workspace/shaketonbde/www/templates/menu.html
-msgid "Invite your friends!"
-msgstr "Invite tes potes !"
-
-#: /workspace/shaketonbde/www/templates/menu.html
-msgid "Menu"
-msgstr "Menu"
-
 #: /workspace/shaketonbde/www/templates/invite.html
 msgid "Name:"
 msgstr "Nom :"
@@ -56,15 +60,7 @@ msgstr "Nom :"
 msgid "Phone:"
 msgstr "Téléphone :"
 
-#: /workspace/shaketonbde/www/templates/camera.html
-#: /workspace/shaketonbde/www/templates/menu.html
-msgid "Shoot your friends!"
-msgstr "Shoote tes potes :"
-
-#: /workspace/shaketonbde/www/templates/event.html
-msgid "Tickets"
-msgstr "Entrées"
-
 #: /workspace/shaketonbde/www/js/controllers.js
 msgid "You are invisible:"
 msgstr "Impossible de te trouver"
+
